Fixed spacing

--- a/src/component-style.css
+++ b/src/component-style.css
@@ -109,7 +109,7 @@ header {
   padding: auto;
   width: 100%;
   top: 0;
-
+  height: 7rem;
   transition: all ease 1s;
   position: relative;
   top: 0;
