--- a/src/page-styles.css
+++ b/src/page-styles.css
@@ -158,7 +158,10 @@ Greys:
   margin-top: 30px;
 }
 .hero-page {
-  padding-top: 6.4rem;
+  margin-top: 4.8rem !important;
+}
+.sticky-padding {
+  padding-top: 11.8rem;
 }
 /*#####################
 ###WID SECTION###
@@ -166,10 +169,10 @@ Greys:
 .wid-heading {
   margin-left: 2rem;
   font-family: inherit;
-
+  margin-top: 12.8rem;
   color: #fff;
   margin-bottom: 2rem;
-  margin-top: 6.4rem;
+
   border-bottom: #740cdc solid 1px;
 }
 .wid-heading h2 {
@@ -229,6 +232,7 @@ Greys:
 }
 .about-title {
   margin-bottom: 2rem;
+  margin-top: 12.8rem;
 }
 .about-disc p {
   font-family: inherit;
@@ -304,10 +308,12 @@ Greys:
   font-size: 4.4rem;
   color: #fff;
   font-family: inherit;
+  border-bottom: solid 1px #740cdc;
 }
-.cta-title h3 {
-  color: #fff;
-  font-size: 3.6rem;
+
+.cta-title {
+  margin-top: 12.8rem;
+  margin-bottom: 1.6rem;
 }
 .contact-details {
   grid-template-rows: repeat(4, 1fr);
